fix z-index

--- a/src/assets/sass/style.sass
+++ b/src/assets/sass/style.sass
@@ -54,7 +54,7 @@ button
     width: 26px
     height: 26px
     cursor: pointer
-    z-index: 3
+    z-index: 21
 
 .menu__btn > span,
 .menu__btn > span::before,
@@ -87,7 +87,7 @@ button
     background-color: #ECEFF1
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .4)
     transition-duration: .25s
-    z-index: 2
+    z-index: 20
 
 .menu__item
     display: block
